--- a/vue_frontend/package.json
+++ b/vue_frontend/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "three": "^0.161.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/three": "^0.161.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
