--- a/vue_frontend/package.json
+++ b/vue_frontend/package.json
@@ -10,6 +10,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^23.1.1",
     "core-js": "^3.8.3",
     "three": "^0.161.0",
     "vue": "^3.2.13",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/three": "^0.161.2",
+    "@types/tween.js": "^18.6.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
