--- a/express_backend/package.json
+++ b/express_backend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "env-cmd node ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,5 +12,8 @@
     "express": "~4.16.1",
     "mongoose": "^8.2.2",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
